--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
-<link rel="icon" type="image/svg+xml" href="/logo.svg">
-
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="/logo.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>пися</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -71,6 +70,15 @@
                     <img src="/btnForMasters.svg" alt="" class="masters__btn-img" width="350" height="55"
                         loading="lazy">
                 </a>
+            </section>
+            <section class="section-alina">
+                <img src="/h1.svg" alt="" class="alina__decoration" width="424" height="98" loading="lazy">
+                <img src="/Frame%2012.svg" alt="" class="alina__img" width="158" height="161" loading="lazy">
+                <h2 class="alina__title">
+                    <span class="alina__title-line alina__title-line--light">ВАШ ЭКСПЕРТ</span>
+                    <span class="alina__title-line alina__title-line--gradient">АЛИНА БРОВИСТ</span>
+                </h2>
+                <p class="alina__text">«Перманентный макияж — это не просто процедура, это ответственность. Более 5 лет я создаю естественные образы, которые не нужно сводить лазером.»</p>
             </section>
             <div class="container section">
                 <h1>Мобильная версия</h1>
