--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,13 +43,13 @@
                     <img src="/Frame%2011.svg" alt="" class="hero__img" width="390" height="358" loading="eager">
                 </div>
                 <div class="hero__content">
-                    <h1 class="hero__title"><span class="hero__title-line">ЭСТЕТИКА. <span
-                                class="hero__title--strong">БРОВИ.</span></span><span
+                    <h1 class="hero__title"><span class="hero__title-line">PRIYMAK <span class="hero__title--strong">ALINA</span></span><span
                             class="hero__title-line hero__title--gradient">ОБУЧЕНИЕ.</span></h1>
                     <p class="hero__text">
-                        Деликатный перманентный макияж, который выглядит естественно. Без боли, «синевы» и плотных
-                        корок. Работаю в авторских техниках, которым обучаю других мастеров.
+                        Самое главное — любовь к своему делу.<br>
+                        Более 3000 довольных клиентов. Обучила около 200 учеников в России.
                     </p>
+                    <p class="hero__quote"><span class="hero__quote-mark">"</span>Любовь к своему делу<span class="hero__quote-mark">"</span></p>
                     <div class="hero__cards">
                         <img src="/cardHero1.svg" alt="" class="hero__card" width="169" height="206" loading="lazy">
                         <img src="/cardHero2.svg" alt="" class="hero__card" width="169" height="206" loading="lazy">
@@ -186,9 +186,12 @@
                 <span class="pricelist2__price">2500Р</span>
                 <span class="pricelist2__price pricelist2__price--2">500Р</span>
                 <span class="pricelist2__price pricelist2__price--3">300Р</span>
-                <img src="/price/Rectangle%202.svg" alt="" class="pricelist2__rect pricelist2__rect--1" width="169" height="174" loading="lazy">
-                <img src="/price/Rectangle%203.svg" alt="" class="pricelist2__rect pricelist2__rect--2" width="169" height="174" loading="lazy">
-                <img src="/price/Rectangle%204.svg" alt="" class="pricelist2__rect pricelist2__rect--3" width="350" height="212" loading="lazy">
+                <img src="/price/Rectangle%202.svg" alt="" class="pricelist2__rect pricelist2__rect--1" width="169"
+                    height="174" loading="lazy">
+                <img src="/price/Rectangle%203.svg" alt="" class="pricelist2__rect pricelist2__rect--2" width="169"
+                    height="174" loading="lazy">
+                <img src="/price/Rectangle%204.svg" alt="" class="pricelist2__rect pricelist2__rect--3" width="350"
+                    height="212" loading="lazy">
             </section>
             <section class="section-permanent">
                 <h2 class="pricelist__title">
@@ -196,16 +199,22 @@
                     <span class="pricelist__title-line pricelist__title-line--gradient">ЛИСТ</span>
                 </h2>
                 <span class="permanent__label">ПЕРМАНЕНТНЫЙ МАКИЯЖ</span>
-                <img src="/mac/Group%202.svg" alt="" class="permanent__group permanent__group--2" width="260" height="42" loading="lazy">
-                <img src="/mac/Group%203.svg" alt="" class="permanent__group permanent__group--3" width="123" height="42" loading="lazy">
-                <img src="/mac/Group%204.svg" alt="" class="permanent__group permanent__group--4" width="238" height="42" loading="lazy">
+                <img src="/mac/Group%202.svg" alt="" class="permanent__group permanent__group--2" width="260"
+                    height="42" loading="lazy">
+                <img src="/mac/Group%203.svg" alt="" class="permanent__group permanent__group--3" width="123"
+                    height="42" loading="lazy">
+                <img src="/mac/Group%204.svg" alt="" class="permanent__group permanent__group--4" width="238"
+                    height="42" loading="lazy">
                 <img src="/mac/Line%208.svg" alt="" class="permanent__line" width="1" height="152" loading="lazy">
                 <span class="permanent__price">9000Р</span>
                 <span class="permanent__price permanent__price--2">5500Р</span>
                 <span class="permanent__price permanent__price--3">7000Р</span>
-                <img src="/mac/Rectangle%202.svg" alt="" class="permanent__rect permanent__rect--1" width="169" height="174" loading="lazy">
-                <img src="/mac/Rectangle%203%20(2).svg" alt="" class="permanent__rect permanent__rect--2" width="169" height="174" loading="lazy">
-                <img src="/mac/Rectangle%205.svg" alt="" class="permanent__rect permanent__rect--3" width="350" height="212" loading="lazy">
+                <img src="/mac/Rectangle%202.svg" alt="" class="permanent__rect permanent__rect--1" width="169"
+                    height="174" loading="lazy">
+                <img src="/mac/Rectangle%203%20(2).svg" alt="" class="permanent__rect permanent__rect--2" width="169"
+                    height="174" loading="lazy">
+                <img src="/mac/Rectangle%205.svg" alt="" class="permanent__rect permanent__rect--3" width="350"
+                    height="212" loading="lazy">
             </section>
             <section class="section-feedback">
                 <h2 class="feedback__title">
@@ -216,31 +225,47 @@
                 <div class="feedback__reviews" id="feedback-reviews">
                     <div class="feedback__reviews-track" id="feedback-reviews-track">
                         <div class="feedback__reviews-slide">
-                            <img src="/social/IMG_6612%201.svg" alt="Отзыв" class="feedback__reviews-slide-img--350x150" width="350" height="150" loading="lazy">
+                            <img src="/social/IMG_6612%201.svg" alt="Отзыв" class="feedback__reviews-slide-img--350x150"
+                                width="350" height="150" loading="lazy">
                         </div>
                         <div class="feedback__reviews-slide">
-                            <img src="/social/IMG_6613%201.svg" alt="Отзыв" class="feedback__reviews-slide-img--350x150" width="350" height="150" loading="lazy">
+                            <img src="/social/IMG_6613%201.svg" alt="Отзыв" class="feedback__reviews-slide-img--350x150"
+                                width="350" height="150" loading="lazy">
                         </div>
                         <div class="feedback__reviews-slide">
-                            <img src="/social/IMG_6614%201.svg" alt="Отзыв" class="feedback__reviews-slide-img--350x150" width="350" height="150" loading="lazy">
+                            <img src="/social/IMG_6614%201.svg" alt="Отзыв" class="feedback__reviews-slide-img--350x150"
+                                width="350" height="150" loading="lazy">
                         </div>
                         <div class="feedback__reviews-slide">
-                            <img src="/social/IMG_6615%201.svg" alt="Отзыв" class="feedback__reviews-slide-img--350x150" width="350" height="150" loading="lazy">
+                            <img src="/social/IMG_6615%201.svg" alt="Отзыв" class="feedback__reviews-slide-img--350x150"
+                                width="350" height="150" loading="lazy">
                         </div>
                         <div class="feedback__reviews-slide feedback__reviews-slide--current">
-                            <img src="/social/IMG_6619%201.svg" alt="Отзыв" class="feedback__reviews-slide-img--350x150" width="350" height="150">
+                            <img src="/social/IMG_6619%201.svg" alt="Отзыв" class="feedback__reviews-slide-img--350x150"
+                                width="350" height="150">
                         </div>
                     </div>
                     <div class="feedback__reviews-fade" aria-hidden="true"></div>
                 </div>
                 <h2 class="feedback__contacts">КОНТАКТЫ</h2>
                 <p class="feedback__tagline">До встречи на преображении</p>
-                <a href="https://t.me/alina_p21" class="feedback__btn feedback__btn--1" aria-label="Telegram" target="_blank" rel="noopener noreferrer"><img src="/buttons/Frame%2019.svg" alt="" width="79" height="70" loading="lazy"></a>
-                <a href="https://wa.me/79189300517" class="feedback__btn feedback__btn--2" aria-label="WhatsApp" target="_blank" rel="noopener noreferrer"><img src="/buttons/Rectangle%201.svg" alt="" width="78" height="70" loading="lazy"></a>
-                <a href="https://www.instagram.com/alinapriymak_?igsh=MTYxeWdwNXpwNDByZQ==" class="feedback__btn feedback__btn--3" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><img src="/buttons/Frame%2020.svg" alt="" width="79" height="70" loading="lazy"></a>
-                <a href="https://n975691.yclients.com/" class="feedback__btn feedback__btn--4" aria-label="Запись на приём" target="_blank" rel="noopener noreferrer"><img src="/buttons/Frame%2021.svg" alt="" width="78" height="70" loading="lazy"></a>
+                <a href="https://t.me/alina_p21" class="feedback__btn feedback__btn--1" aria-label="Telegram"
+                    target="_blank" rel="noopener noreferrer"><img src="/buttons/Frame%2019.svg" alt="" width="79"
+                        height="70" loading="lazy"></a>
+                <a href="https://wa.me/79189300517" class="feedback__btn feedback__btn--2" aria-label="WhatsApp"
+                    target="_blank" rel="noopener noreferrer"><img src="/buttons/Rectangle%201.svg" alt="" width="78"
+                        height="70" loading="lazy"></a>
+                <a href="https://www.instagram.com/alinapriymak_?igsh=MTYxeWdwNXpwNDByZQ=="
+                    class="feedback__btn feedback__btn--3" aria-label="Instagram" target="_blank"
+                    rel="noopener noreferrer"><img src="/buttons/Frame%2020.svg" alt="" width="79" height="70"
+                        loading="lazy"></a>
+                <a href="https://n975691.yclients.com/" class="feedback__btn feedback__btn--4"
+                    aria-label="Запись на приём" target="_blank" rel="noopener noreferrer"><img
+                        src="/buttons/Frame%2021.svg" alt="" width="78" height="70" loading="lazy"></a>
                 <p class="feedback__phone">Номер: <a href="tel:+79189300517">+7 918 930 05 17</a></p>
-                <p class="feedback__address">Адрес: <a href="https://yandex.ru/maps/?text=%D0%B3.+%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%BE%D0%B4%D0%B0%D1%80%2C+%D1%83%D0%BB.+%D0%9E%D1%80%D0%B4%D0%B6%D0%BE%D0%BD%D0%B8%D0%BA%D0%B8%D0%B4%D0%B7%D0%B5+2" target="_blank" rel="noopener noreferrer">г. Краснодар, ул. Орджоникидзе 2</a></p>
+                <p class="feedback__address">Адрес: <a
+                        href="https://yandex.ru/maps/?text=%D0%B3.+%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%BE%D0%B4%D0%B0%D1%80%2C+%D1%83%D0%BB.+%D0%9E%D1%80%D0%B4%D0%B6%D0%BE%D0%BD%D0%B8%D0%BA%D0%B8%D0%B4%D0%B7%D0%B5+2"
+                        target="_blank" rel="noopener noreferrer">г. Краснодар, ул. Орджоникидзе 2</a></p>
             </section>
         </main>
     </div>
