--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,7 +48,7 @@
                 <img src="/navi/Vector%20(2).svg" alt="" class="nav-panel__close-icon" width="16" height="14" aria-hidden="true">
             </button>
             <nav class="nav-panel__nav">
-                <a href="#hero" class="nav-panel__link">Обучение</a>
+                <a href="obuchenie.html" class="nav-panel__link">Обучение</a>
                 <a href="#alina" class="nav-panel__link">О мастере</a>
                 <a href="#alina" class="nav-panel__link">Портфолио</a>
                 <a href="#pricelist-brows" class="nav-panel__link">Прайс лист</a>
@@ -90,7 +90,7 @@
                 <img src="/cardForMasters2.png" alt="" class="masters__card masters__card--2" width="349" height="236"
                     loading="lazy">
                 <img src="/cardForMasters.png" alt="" class="masters__card" width="350" height="236" loading="lazy">
-                <a href="#" class="masters__btn" aria-label="Для мастеров">
+                <a href="obuchenie.html" class="masters__btn" id="masters-obuchenie-btn" aria-label="Обучение">
                     <img src="/btnForMasters.svg" alt="" class="masters__btn-img" width="350" height="55"
                         loading="lazy">
                 </a>
