--- a/frontend/resnitsy.html
+++ b/frontend/resnitsy.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Обучение — программы</title>
+    <title>Обучение — Ресницы</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Onest:wght@200;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <!-- Панель меню (как на главной) -->
     <div class="nav-panel" id="nav-panel" aria-hidden="true">
         <div class="nav-panel__deco-svg-wrap" aria-hidden="true">
             <span class="nav-panel__deco">
@@ -43,29 +42,19 @@
         </nav>
     </div>
 
-    <!-- Контент страницы Обучение: 390px по центру, координаты по макету -->
     <main class="obuchenie" id="obuchenie">
-        <a href="index.html" class="obuchenie__back" aria-label="Назад на главную">
+        <a href="obuchenie.html" class="obuchenie__back" aria-label="Назад к программам">
             <img src="/backbutton.svg" alt="" class="obuchenie__back-icon" width="7" height="14" aria-hidden="true">
         </a>
         <button type="button" class="obuchenie__nav-btn" id="obuchenie-nav-btn" aria-label="Меню">
             <img src="/Vector.png" alt="" class="obuchenie__nav-btn-icon" width="16" height="14" aria-hidden="true">
         </button>
-        <h1 class="obuchenie__title">
-            <span class="obuchenie__title-line obuchenie__title-line--light">программы</span>
-            <span class="obuchenie__title-line obuchenie__title-line--gradient">обучения</span>
+        <h1 class="obuchenie__title obuchenie__title--single">
+            <span class="obuchenie__title-line obuchenie__title-line--gradient">Ресницы</span>
         </h1>
-        <p class="obuchenie__subtitle">Выберите приоритетную зону, чтобы ознакомиться с тарифами и планом курса</p>
-        <img src="/Rectangle%2010.png" alt="" class="obuchenie__img" width="350" height="426" loading="lazy">
-        <a href="brovi.html" class="obuchenie__btn" aria-label="Брови">
-            <img src="/btnBROVI.svg" alt="" class="obuchenie__btn-img" width="350" height="55" aria-hidden="true">
-        </a>
-        <a href="resnitsy.html" class="obuchenie__btn obuchenie__btn--resnitsy" aria-label="Ресницы">
-            <img src="/btnRESNITSY.svg" alt="" class="obuchenie__btn-img" width="350" height="55" aria-hidden="true">
-        </a>
-        <div class="obuchenie__inner">
+        <div class="obuchenie__inner obuchenie__inner--program">
             <div class="obuchenie__content">
-                <!-- Контент программ обучения -->
+                <!-- Контент программы «Ресницы» -->
             </div>
         </div>
     </main>
