--- a/frontend/brovi.html
+++ b/frontend/brovi.html
@@ -58,17 +58,19 @@
     </div>
 
     <main class="obuchenie obuchenie--program-page" id="obuchenie">
-        <a href="obuchenie.html" class="obuchenie__back" aria-label="Назад к программам">
-            <img src="/backbutton.svg" alt="" class="obuchenie__back-icon" width="7" height="14" aria-hidden="true">
-        </a>
-        <button type="button" class="obuchenie__nav-btn" id="obuchenie-nav-btn" aria-label="Меню">
-            <img src="/Vector.png" alt="" class="obuchenie__nav-btn-icon" width="16" height="14" aria-hidden="true">
-        </button>
-        <p class="obuchenie__meta">Длительность 3 дня</p>
-        <h1 class="obuchenie__program-heading">
-            <span class="obuchenie__program-heading-line obuchenie__program-heading-line--light">базовое обучение</span>
-            <span class="obuchenie__program-heading-line obuchenie__program-heading-line--medium">брови</span>
-        </h1>
+        <header class="obuchenie__header" aria-label="Шапка страницы">
+            <a href="obuchenie.html" class="obuchenie__back" aria-label="Назад к программам">
+                <img src="/backbutton.svg" alt="" class="obuchenie__back-icon" width="7" height="14" aria-hidden="true">
+            </a>
+            <button type="button" class="obuchenie__nav-btn" id="obuchenie-nav-btn" aria-label="Меню">
+                <img src="/Vector.png" alt="" class="obuchenie__nav-btn-icon" width="16" height="14" aria-hidden="true">
+            </button>
+            <p class="obuchenie__meta">Длительность 3 дня</p>
+            <h1 class="obuchenie__program-heading">
+                <span class="obuchenie__program-heading-line obuchenie__program-heading-line--light">базовое обучение</span>
+                <span class="obuchenie__program-heading-line obuchenie__program-heading-line--medium">брови</span>
+            </h1>
+        </header>
         <div class="obuchenie__program-content">
         <div class="obuchenie__accordion" id="brovi-accordion">
             <div class="obuchenie__accordion-frame">
