accordions - done/ page brovi

--- a/frontend/brovi.html
+++ b/frontend/brovi.html
@@ -78,10 +78,7 @@
                     id="brovi-accordion-header">
                     <span class="obuchenie__accordion-title">1 день-теория</span>
                     <span class="obuchenie__accordion-arrow" aria-hidden="true">
-                        <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 1L6 6L11 1" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                        </svg>
+                        <img src="/accordion.svg" alt="" class="obuchenie__accordion-arrow-img" width="7" height="14">
                     </span>
                 </div>
                 <div class="obuchenie__accordion-content" id="brovi-accordion-content" role="region"
@@ -145,7 +142,50 @@
                 </div>
             </div>
         </div>
-            <div class="obuchenie__program-footer">
+        <div class="obuchenie__accordion" id="brovi-accordion-2">
+            <div class="obuchenie__accordion-frame">
+                <div class="obuchenie__accordion-header" aria-expanded="false" aria-controls="brovi-accordion-2-content"
+                    id="brovi-accordion-2-header">
+                    <span class="obuchenie__accordion-title">2 день-практика</span>
+                    <span class="obuchenie__accordion-arrow" aria-hidden="true">
+                        <img src="/accordion.svg" alt="" class="obuchenie__accordion-arrow-img" width="7" height="14">
+                    </span>
+                </div>
+                <div class="obuchenie__accordion-content" id="brovi-accordion-2-content" role="region"
+                    aria-labelledby="brovi-accordion-2-header">
+                    <div class="obuchenie__accordion-body obuchenie__accordion-body--day2">
+                        <img src="/Rectangle%20brovi%202%20day.svg" alt="" class="obuchenie__accordion-img obuchenie__accordion-img--day2" width="302" height="246" loading="lazy">
+                        <p class="obuchenie__accordion-day2-caption">3 Модели</p>
+                        <p class="obuchenie__accordion-day2-time">С 10:00 до 18:00 (Время можно скорректировать)</p>
+                        <!-- контент 2 дня при необходимости -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="obuchenie__accordion" id="brovi-accordion-3">
+            <div class="obuchenie__accordion-frame">
+                <div class="obuchenie__accordion-header" aria-expanded="false" aria-controls="brovi-accordion-3-content"
+                    id="brovi-accordion-3-header">
+                    <span class="obuchenie__accordion-title">3 день-экзамен</span>
+                    <span class="obuchenie__accordion-arrow" aria-hidden="true">
+                        <img src="/accordion.svg" alt="" class="obuchenie__accordion-arrow-img" width="7" height="14">
+                    </span>
+                </div>
+                <div class="obuchenie__accordion-content" id="brovi-accordion-3-content" role="region"
+                    aria-labelledby="brovi-accordion-3-header">
+                    <div class="obuchenie__accordion-body obuchenie__accordion-body--day3">
+                        <img src="/day3.svg" alt="" class="obuchenie__accordion-img obuchenie__accordion-img--day3" width="302" height="246" loading="lazy">
+                        <p class="obuchenie__accordion-day3-title">Подводим итоги</p>
+                        <p class="obuchenie__accordion-day3-caption">2 Модели</p>
+                        <p class="obuchenie__accordion-day3-cert">Выдача сертификата</p>
+                        <p class="obuchenie__accordion-day3-time">С 10:00 до 18:00 (Время можно скорректировать)</p>
+                        <p class="obuchenie__accordion-day3-price obuchenie__accordion-day3-price--group">Стоимость в группе 23.000₽</p>
+                        <p class="obuchenie__accordion-day3-price obuchenie__accordion-day3-price--indiv">Индивидуально 25.000₽</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="obuchenie__program-footer">
                 <p class="obuchenie__promo">Также скидка на материал 10% по моему промокоду</p>
                 <img src="/priymak.svg" alt="" class="obuchenie__deco" width="397" height="61" aria-hidden="true">
                 <p class="obuchenie__price">Цена: 20.000₽</p>
