--- a/frontend/resnitsy.html
+++ b/frontend/resnitsy.html
@@ -15,14 +15,28 @@
     <div class="nav-panel" id="nav-panel" aria-hidden="true">
         <div class="nav-panel__deco-svg-wrap" aria-hidden="true">
             <span class="nav-panel__deco">
-                <svg class="nav-panel__deco-svg" viewBox="0 0 111 722" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                    <path d="M111 722L6.10352e-05 722L5.90754e-05 677.166C5.87021e-05 668.626 1.2543 661.18 3.76277 654.827C6.27124 648.37 10.3475 643.371 15.9916 639.83C21.6357 636.185 29.2656 634.363 38.8814 634.363C47.7656 634.363 55.1865 636.29 61.1441 640.143C67.1018 643.996 71.5439 649.256 74.4704 655.921C77.2925 662.586 78.7035 670.188 78.7035 678.728L78.7035 696.693L111 696.693L111 722ZM56.1272 696.693L56.1272 678.728C56.1272 672.792 54.6639 668.106 51.7374 664.669C48.8108 661.128 44.5255 659.357 38.8814 659.357C33.8645 659.357 30.0495 660.868 27.4365 663.888C24.8235 666.804 23.517 671.646 23.517 678.416L23.517 696.693L56.1272 696.693Z" fill="currentColor"/>
-                    <path d="M111 618.721L5.65207e-05 618.721L5.45268e-05 573.106C5.42992e-05 567.898 0.522653 562.743 1.56785 557.64C2.50853 552.433 4.28536 547.695 6.89836 543.425C9.51135 539.155 13.2218 535.77 18.0297 533.271C22.7331 530.667 28.7953 529.365 36.2162 529.365C41.2331 529.365 45.8842 530.198 50.1696 531.865C54.4549 533.531 58.1653 536.03 61.3009 539.363C64.4365 542.591 66.8927 546.705 68.6696 551.704L111 526.553L111 555.297L72.7458 576.699L72.7458 593.414L111 593.414L111 618.721ZM50.3263 593.414L50.3263 573.887C50.3263 570.867 50.065 568.211 49.5424 565.92C48.9153 563.524 48.0792 561.494 47.034 559.827C45.8842 558.161 44.421 556.911 42.6441 556.078C40.8673 555.141 38.7246 554.62 36.2162 554.516C32.767 554.516 30.154 555.349 28.3772 557.015C26.6003 558.578 25.3461 560.712 24.6145 563.42C23.8828 566.128 23.517 569.252 23.517 572.793L23.517 593.414L50.3263 593.414Z" fill="currentColor"/>
-                    <path d="M111 509.339L5.17395e-05 509.339L5.06332e-05 484.032L111 484.032L111 509.339Z" fill="currentColor"/>
-                    <path d="M111 430.808L69.767 430.808L5.01299e-05 472.517L4.8853e-05 443.305L46.4068 417.998L4.66133e-05 392.066L4.53569e-05 363.322L69.6102 405.345L111 405.345L111 430.808Z" fill="currentColor"/>
-                    <path d="M111 351.903L4.48577e-05 351.903L4.34237e-05 319.098L51.1102 290.979L4.09655e-05 262.86L3.95862e-05 231.304L111 231.304L111 256.767L35.1187 256.767L87.6399 286.292L87.6399 296.446L35.1187 326.596L111 326.596L111 351.903Z" fill="currentColor"/>
-                    <path d="M111 220.516L3.72026e-05 176.775L3.60281e-05 149.906L111 106.634L111 133.972L93.7543 140.065L93.7543 187.085L111 193.334L111 220.516ZM70.7077 179.118L70.7077 148.031L27.75 163.341L70.7077 179.118Z" fill="currentColor"/>
-                    <path d="M111 95.9164L3.36682e-05 95.9164L3.2562e-05 70.6095L44.3687 70.6095L44.3687 55.1442L3.07388e-05 28.8999L2.94755e-05 0L53.6187 34.2112L111 0.156184L111 29.681L67.7289 54.5193L67.7289 70.6095L111 70.6095L111 95.9164Z" fill="currentColor"/>
+                <svg class="nav-panel__deco-svg" viewBox="0 0 111 722" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true">
+                    <path
+                        d="M111 722L6.10352e-05 722L5.90754e-05 677.166C5.87021e-05 668.626 1.2543 661.18 3.76277 654.827C6.27124 648.37 10.3475 643.371 15.9916 639.83C21.6357 636.185 29.2656 634.363 38.8814 634.363C47.7656 634.363 55.1865 636.29 61.1441 640.143C67.1018 643.996 71.5439 649.256 74.4704 655.921C77.2925 662.586 78.7035 670.188 78.7035 678.728L78.7035 696.693L111 696.693L111 722ZM56.1272 696.693L56.1272 678.728C56.1272 672.792 54.6639 668.106 51.7374 664.669C48.8108 661.128 44.5255 659.357 38.8814 659.357C33.8645 659.357 30.0495 660.868 27.4365 663.888C24.8235 666.804 23.517 671.646 23.517 678.416L23.517 696.693L56.1272 696.693Z"
+                        fill="currentColor" />
+                    <path
+                        d="M111 618.721L5.65207e-05 618.721L5.45268e-05 573.106C5.42992e-05 567.898 0.522653 562.743 1.56785 557.64C2.50853 552.433 4.28536 547.695 6.89836 543.425C9.51135 539.155 13.2218 535.77 18.0297 533.271C22.7331 530.667 28.7953 529.365 36.2162 529.365C41.2331 529.365 45.8842 530.198 50.1696 531.865C54.4549 533.531 58.1653 536.03 61.3009 539.363C64.4365 542.591 66.8927 546.705 68.6696 551.704L111 526.553L111 555.297L72.7458 576.699L72.7458 593.414L111 593.414L111 618.721ZM50.3263 593.414L50.3263 573.887C50.3263 570.867 50.065 568.211 49.5424 565.92C48.9153 563.524 48.0792 561.494 47.034 559.827C45.8842 558.161 44.421 556.911 42.6441 556.078C40.8673 555.141 38.7246 554.62 36.2162 554.516C32.767 554.516 30.154 555.349 28.3772 557.015C26.6003 558.578 25.3461 560.712 24.6145 563.42C23.8828 566.128 23.517 569.252 23.517 572.793L23.517 593.414L50.3263 593.414Z"
+                        fill="currentColor" />
+                    <path d="M111 509.339L5.17395e-05 509.339L5.06332e-05 484.032L111 484.032L111 509.339Z"
+                        fill="currentColor" />
+                    <path
+                        d="M111 430.808L69.767 430.808L5.01299e-05 472.517L4.8853e-05 443.305L46.4068 417.998L4.66133e-05 392.066L4.53569e-05 363.322L69.6102 405.345L111 405.345L111 430.808Z"
+                        fill="currentColor" />
+                    <path
+                        d="M111 351.903L4.48577e-05 351.903L4.34237e-05 319.098L51.1102 290.979L4.09655e-05 262.86L3.95862e-05 231.304L111 231.304L111 256.767L35.1187 256.767L87.6399 286.292L87.6399 296.446L35.1187 326.596L111 326.596L111 351.903Z"
+                        fill="currentColor" />
+                    <path
+                        d="M111 220.516L3.72026e-05 176.775L3.60281e-05 149.906L111 106.634L111 133.972L93.7543 140.065L93.7543 187.085L111 193.334L111 220.516ZM70.7077 179.118L70.7077 148.031L27.75 163.341L70.7077 179.118Z"
+                        fill="currentColor" />
+                    <path
+                        d="M111 95.9164L3.36682e-05 95.9164L3.2562e-05 70.6095L44.3687 70.6095L44.3687 55.1442L3.07388e-05 28.8999L2.94755e-05 0L53.6187 34.2112L111 0.156184L111 29.681L67.7289 54.5193L67.7289 70.6095L111 70.6095L111 95.9164Z"
+                        fill="currentColor" />
                 </svg>
             </span>
         </div>
@@ -30,7 +44,8 @@
             <span class="nav-panel__deco-text">ОБУЧЕНИЕ</span>
         </div>
         <button type="button" class="nav-panel__close" id="nav-panel-close" aria-label="Закрыть меню">
-            <img src="/navi/Vector%20(2).svg" alt="" class="nav-panel__close-icon" width="16" height="14" aria-hidden="true">
+            <img src="/navi/Vector%20(2).svg" alt="" class="nav-panel__close-icon" width="16" height="14"
+                aria-hidden="true">
         </button>
         <nav class="nav-panel__nav">
             <a href="obuchenie.html" class="nav-panel__link">Обучение</a>
@@ -42,17 +57,88 @@
         </nav>
     </div>
 
-    <main class="obuchenie" id="obuchenie">
-        <a href="obuchenie.html" class="obuchenie__back" aria-label="Назад к программам">
-            <img src="/backbutton.svg" alt="" class="obuchenie__back-icon" width="7" height="14" aria-hidden="true">
-        </a>
-        <button type="button" class="obuchenie__nav-btn" id="obuchenie-nav-btn" aria-label="Меню">
-            <img src="/Vector.png" alt="" class="obuchenie__nav-btn-icon" width="16" height="14" aria-hidden="true">
-        </button>
-        <h1 class="obuchenie__title obuchenie__title--single">
-            <span class="obuchenie__title-line obuchenie__title-line--gradient">Ресницы</span>
-        </h1>
-        <div class="obuchenie__inner obuchenie__inner--program">
+    <main class="obuchenie obuchenie--program-page obuchenie--resnitsy-page" id="obuchenie">
+        <header class="obuchenie__header" aria-label="Шапка страницы">
+            <a href="obuchenie.html" class="obuchenie__back" aria-label="Назад к программам">
+                <img src="/backbutton.svg" alt="" class="obuchenie__back-icon" width="7" height="14" aria-hidden="true">
+            </a>
+            <button type="button" class="obuchenie__nav-btn" id="obuchenie-nav-btn" aria-label="Меню">
+                <img src="/Vector.png" alt="" class="obuchenie__nav-btn-icon" width="16" height="14" aria-hidden="true">
+            </button>
+            <p class="obuchenie__meta">Длительность 2 дня</p>
+            <h1 class="obuchenie__program-heading">
+                <span class="obuchenie__program-heading-line obuchenie__program-heading-line--light">базовое
+                    обучение</span>
+                <span
+                    class="obuchenie__program-heading-line obuchenie__program-heading-line--medium">ламинирование</span>
+                <span class="obuchenie__program-heading-line obuchenie__program-heading-line--medium">ресниц</span>
+            </h1>
+        </header>
+        <div class="obuchenie__program-content">
+            <div class="obuchenie__accordion" id="resnitsy-accordion">
+                <div class="obuchenie__accordion-frame">
+                    <div class="obuchenie__accordion-header" aria-expanded="false"
+                        aria-controls="resnitsy-accordion-content" id="resnitsy-accordion-header">
+                        <span class="obuchenie__accordion-title">1 день-теория</span>
+                        <span class="obuchenie__accordion-arrow" aria-hidden="true">
+                            <img src="/accordion.svg" alt="" class="obuchenie__accordion-arrow-img" width="7"
+                                height="14">
+                        </span>
+                    </div>
+                    <div class="obuchenie__accordion-content" id="resnitsy-accordion-content" role="region"
+                        aria-labelledby="resnitsy-accordion-header">
+                        <div class="obuchenie__accordion-body obuchenie__accordion-body--resnitsy-day1">
+                            <img src="/Rectangle%2011%20(2).svg" alt="" class="obuchenie__accordion-img obuchenie__accordion-img--resnitsy-day1" width="302" height="246" loading="lazy">
+                            <p class="obuchenie__accordion-resnitsy-day1__text obuchenie__accordion-resnitsy-day1__text--1">Строение волоса</p>
+                            <p class="obuchenie__accordion-resnitsy-day1__text obuchenie__accordion-resnitsy-day1__text--2">Химические процессы ламинирования</p>
+                            <p class="obuchenie__accordion-resnitsy-day1__text obuchenie__accordion-resnitsy-day1__text--3">Стартовый набор</p>
+                            <p class="obuchenie__accordion-resnitsy-day1__text obuchenie__accordion-resnitsy-day1__text--4">Протокол процедуры</p>
+                            <p class="obuchenie__accordion-resnitsy-day1__text obuchenie__accordion-resnitsy-day1__text--5">Валики для ламинирования, индивидуальный подбор, с учетом</p>
+                            <p class="obuchenie__accordion-resnitsy-day1__text obuchenie__accordion-resnitsy-day1__text--6">Валики для ламинирования, индивидуальный подбор, с учетом строения глаза и роста ресниц</p>
+                            <p class="obuchenie__accordion-resnitsy-day1__text obuchenie__accordion-resnitsy-day1__text--7">Установка валика</p>
+                            <p class="obuchenie__accordion-resnitsy-day1__text obuchenie__accordion-resnitsy-day1__text--8">Схемы нанесения составов для разных эффектов</p>
+                            <p class="obuchenie__accordion-resnitsy-day1__text obuchenie__accordion-resnitsy-day1__text--9">Как исправить некачественное ламинирование</p>
+                            <p class="obuchenie__accordion-resnitsy-day1__text obuchenie__accordion-resnitsy-day1__text--10">Противопоказания при ламинировании</p>
+                            <p class="obuchenie__accordion-resnitsy-day1__text obuchenie__accordion-resnitsy-day1__text--11">Уход за ресницами после процедуры</p>
+                            <p class="obuchenie__accordion-resnitsy-day1__text obuchenie__accordion-resnitsy-day1__text--12">Создание идеальных, продаваемых фото</p>
+                            <p class="obuchenie__accordion-resnitsy-day1__text obuchenie__accordion-resnitsy-day1__text--13">Практика<br>Отработка на 1-2 модели</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="obuchenie__accordion" id="resnitsy-accordion-2">
+                <div class="obuchenie__accordion-frame">
+                    <div class="obuchenie__accordion-header" aria-expanded="false"
+                        aria-controls="resnitsy-accordion-2-content" id="resnitsy-accordion-2-header">
+                        <span class="obuchenie__accordion-title">2 день-практика</span>
+                        <span class="obuchenie__accordion-arrow" aria-hidden="true">
+                            <img src="/accordion.svg" alt="" class="obuchenie__accordion-arrow-img" width="7"
+                                height="14">
+                        </span>
+                    </div>
+                    <div class="obuchenie__accordion-content" id="resnitsy-accordion-2-content" role="region"
+                        aria-labelledby="resnitsy-accordion-2-header">
+                        <div class="obuchenie__accordion-body obuchenie__accordion-body--resnitsy-day2">
+                            <img src="/Rectangle%2014.svg" alt="" class="obuchenie__accordion-img obuchenie__accordion-img--resnitsy-day2" width="302" height="246" loading="lazy">
+                            <p class="obuchenie__accordion-resnitsy-day2__caption">Отработка на 2-х моделях</p>
+                            <p class="obuchenie__accordion-resnitsy-day2__title">На курсе предоставляются:</p>
+                            <p class="obuchenie__accordion-resnitsy-day2__item obuchenie__accordion-resnitsy-day2__item--1">Модели</p>
+                            <p class="obuchenie__accordion-resnitsy-day2__item obuchenie__accordion-resnitsy-day2__item--2">Рабочая тетрадь бровиста</p>
+                            <p class="obuchenie__accordion-resnitsy-day2__item obuchenie__accordion-resnitsy-day2__item--3">Материал</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="obuchenie__program-footer">
+                <p class="obuchenie__promo">Также скидка на материал 10% по моему промокоду</p>
+                <img src="/priymak.svg" alt="" class="obuchenie__deco" width="397" height="61" aria-hidden="true">
+                <p class="obuchenie__price">Цена: 20.000₽</p>
+                <a href="#" class="obuchenie__btn obuchenie__btn--program" aria-label="Записаться на обучение ресницы">
+                    <img src="/btnBrovi2.svg" alt="" class="obuchenie__btn-img" width="350" height="55" aria-hidden="true">
+                </a>
+            </div>
+        </div>
+        <div class="obuchenie__inner obuchenie__inner--program obuchenie__inner--resnitsy">
             <div class="obuchenie__content">
                 <!-- Контент программы «Ресницы» -->
             </div>
