--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,7 +75,7 @@
                         <img src="/cardHero1.png" alt="" class="hero__card" width="169" height="206" loading="lazy">
                         <img src="/cardHero2.png" alt="" class="hero__card" width="169" height="206" loading="lazy">
                     </div>
-                    <a href="#" class="hero__btn" aria-label="Кнопка hero">
+                    <a href="https://wa.me/79189300517" class="hero__btn" aria-label="Кнопка hero" target="_blank" rel="noopener noreferrer">
                         <img src="/btnHero.svg" alt="" class="hero__btn-img" width="350" height="55" loading="lazy">
                     </a>
                 </div>
@@ -168,7 +168,7 @@
                     loading="lazy">
                 <img src="/aeth/5.png" alt="" class="aesthetics__img aesthetics__img--5" width="169" height="170"
                     loading="lazy">
-                <a href="#" class="aesthetics__btn" aria-label="Эстетика">
+                <a href="podval.html" class="aesthetics__btn" aria-label="Посмотреть все">
                     <img src="/btnAESTH.svg" alt="" class="aesthetics__btn-img" width="350" height="55" loading="lazy">
                 </a>
             </section>
