--- a/frontend/brovi.html
+++ b/frontend/brovi.html
@@ -189,7 +189,7 @@
                 <p class="obuchenie__promo">Также скидка на материал 10% по моему промокоду</p>
                 <img src="/priymak.svg" alt="" class="obuchenie__deco" width="397" height="61" aria-hidden="true">
                 <p class="obuchenie__price">Цена: 20.000₽</p>
-                <a href="#" class="obuchenie__btn obuchenie__btn--program" aria-label="Записаться на обучение брови">
+                <a href="https://wa.me/79189300517" class="obuchenie__btn obuchenie__btn--program" aria-label="Записаться на обучение брови" target="_blank" rel="noopener noreferrer">
                     <img src="/btnBrovi2.svg" alt="" class="obuchenie__btn-img" width="350" height="55" aria-hidden="true">
                 </a>
             </div>
